# datadocs

./: .eslintrc.json  .gitignore  PREREQUISITES.ubuntu.md  PREREQUISITES.windows.md  README.md  lerna.json  package.json
cpp/ingest/: .clang-format  .gitignore  BUILD.Ubuntu.md  BUILD.Windows.md  CMakeLists.txt  DEPENDENCIES.md  PREREQUISITES.ubuntu.md  PREREQUISITES.windows.md  README.md  configure.bat  configure.sh
cpp/ingest/cmake/boost/: boost.txt.in
cpp/ingest/cmake/icu/: icu.cmake  icu.txt.in
cpp/ingest/cmake/libexpat/: libexpat.txt.in
cpp/ingest/cmake/libxml2/: libxml2.cmake  libxml2.generateconfigheader.cmake  libxml2.txt.in
cpp/ingest/cmake/rapidjson/: rapidjson.txt.in
cpp/ingest/cmake/zlib/: zlib.txt.in
cpp/ingest/src/emingest/: emscripten_exports.cpp  emscripten_main.cpp
cpp/ingest/src/emingest/js/: emscripten_export_fs.js
cpp/ingest/src/ingest/: convert_file.cpp  convert_file.h  data.cpp  data.h  dataset.cpp  dataset.h  table.cpp  table.h  types.cpp  types.h
cpp/ingest/src/ingest_parser/: Dockerfile  README.md  benchmark.cpp  csv_reader.cpp  csv_reader.h  file_reader.cpp  file_reader.h  inferrer.cpp  inferrer.h  main.cpp  test.sh  utility.cpp  utility.h  xls_reader.cpp  xls_reader.h  zip_reader.cpp  zip_reader.h
cpp/ingest/src/ingest_parser/docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
cpp/ingest/src/ingest_parser/docs/_static/: basic.css
cpp/ingest/src/ingest_parser/docsrc/: Makefile  conf.py  index.rst  tutorial.py
cpp/ingest/src/ingest_parser/python/: build_cython.py  inferrer_c.pyx  inferrer_c_test.py  sample.py
cpp/ingest/src/ingest_parser/test/csv_files/: Y_small.tsv  _This_is_a_png_file.csv  bignums.csv  bigstrings.csv  geojson_example.csv  json_example.csv  test_dates_and_empty.csv  testerror.txt  wktgeometrics.csv  xml_example.csv
cpp/ingest/src/ingest_parser/test/csv_result/: CollegePlaying.csv  CollegePlaying.json  _This_is_a_png_file.json
cpp/ingest/src/ingest_parser/xls/: read_xls.cpp  read_xlsx.cpp  xlscommon.cpp  xlscommon.h  zip_memory.cpp
cpp/ingest/src/ingest_parser/xls/src/: endian.c  ole.c  xls.c  xlstool.c
cpp/ingest/src/memory_utils/: memory_utils.cpp  memory_utils.h
cpp/ingest/src/simple_icu_init/: simple_icu_init.cpp
cpp/ingest/test/test_dependencies/: main.cpp  testxml2.c  testzlib.c
cpp/ingest/test/test_dependencies/js/: hide_canvas.js
cpp/ingest/test/test_emingest/: Readme.md
cpp/ingest/test/test_emingest/js/: test_emingest.html  test_emingest.js  test_emingest_loader.js
cpp/ingest/test/test_ingest/: Readme.md  main.cpp
cpp/ingest/test/test_ingest/js/: load_file.js
cpp/perspective/: .gitignore  CMakeLists.txt
cpp/perspective/cmake/: Boost.txt.in
cpp/perspective/docs/: PERSPECTIVE MEMORY OPTIMIZATION REPORT.docx
cpp/perspective/src/cpp/: aggregate.cpp  aggspec.cpp  base.cpp  column.cpp  computed.cpp  computed_column_map.cpp  computed_function.cpp  computedspec.cpp  config.cpp  context_grouped_pkey.cpp  context_one.cpp  context_two.cpp  context_zero.cpp  data_format_spec.cpp  data_slice.cpp  date.cpp  decimal.cpp  dense_nodes.cpp  dense_tree.cpp  dense_tree_context.cpp  dependency.cpp  duration.cpp  emscripten.cpp  extract_aggregate.cpp  filter.cpp  flat_traversal.cpp  formula.cpp  gnode.cpp  gnode_state.cpp  mask.cpp  pagination.cpp  pivot.cpp  scalar.cpp  schema.cpp  search.cpp  searchspec.cpp  sort_specification.cpp  sparse_tree.cpp  sparse_tree_node.cpp  storage.cpp  (+8 more)
cpp/perspective/test/: CMakeLists.txt
cpp/perspective/test/cpp/: search.cpp  simple.cpp
deploy/: Dockerfile  build.sh
docker/emsdk/: Dockerfile
docs/static/css/: material.dark.css
examples/datadocs/: .htaccess  canvas.html  clusterize.js  custom.css  dragdrop.html  embed.html  flatpickr.html  flatpickr.js  grids.html  hyperlist.html  index.html  popup.html  popup2.html  resize.html  vis.html  visualize.html
examples/datadocs/files/: C.csv  NullTest.csv  dupes.csv
examples/datadocs/funcpopup/: formula-parser.js  formula.css  formula.js  fparser.js  funclist.js  funcpopup.html
fin-hypergrid/compare/src/: DatasaurLocal.js  defaults.js
fin-hypergrid/compare/src/Finbars/: events.js  orientationHashes.js
fin-hypergrid/compare/src/Hypergrid/: events.js  index.js  scrolling.js  selection.js
fin-hypergrid/compare/src/behaviors/: Behavior.js  Column.js  columnProperties.js  gridCellProperties.js  rowProperties.js  subgrids.js
fin-hypergrid/compare/src/cellEditors/: CellEditor.js  Textfield.js  index.js
fin-hypergrid/compare/src/cellRenderers/: Button.js  CellRenderer.js  ErrorCell.js  SimpleCell.js  SparkBar.js  SparkLine.js  TreeCell.js  index.js
fin-hypergrid/compare/src/features/: CellClick.js  CellEditing.js  CellSelection.js  ColumnFixation.js  ColumnMoving.js  ColumnResizing.js  ColumnSelection.js  ColumnSorting.js  Feature.js  Filters.js  OnHover.js  RowSelection.js  index.js
fin-hypergrid/compare/src/lib/: Canvas.js  Localization.js  SelectionModel.js  cellEventFactory.js  dynamicProperties.js  graphics.js
fin-hypergrid/compare/src/renderer/: bundle-columns.js  bundle-rows.js  by-cells.js  by-columns-and-rows.js  by-columns-discrete.js  by-columns.js  by-rows.js  index.js  layer-props.js
fin-hypergrid/csv-writer/dis/lib/: file-writer.js
fin-hypergrid/csv-writer/src/lib/: file-writer.ts
fin-hypergrid/fin-hypergrid/: package.json
fin-hypergrid/fin-hypergrid/css/: grid.css  index.js
fin-hypergrid/fin-hypergrid/src/: DatasaurLocal.js  defaults.js
fin-hypergrid/fin-hypergrid/src/Finbars/: events.js  index.js  index.old.js
fin-hypergrid/fin-hypergrid/src/Hypergrid/: api.js  columnApi.js  events.js  index.js  modules.js  scrolling.js  scrolling.old.js  selection.js  themes.js
fin-hypergrid/fin-hypergrid/src/behaviors/: Behavior.js  Column.js  columnProperties.js  rowProperties.js
fin-hypergrid/fin-hypergrid/src/cellEditors/: Bigtext.js  CellEditor.js  Textcolorization.js  index.js  (+2 more)
scripts/: build.js  build_cpp.js  build_test_dependencies.js  build_test_emingest.js  build_test_ingest.js  clean.js  fix_cpp.js  lint_cpp.js
(+102 files in other folders)
